# OOP_LAB5

./: CMakeLists.txt  README.md
include/: DoublyLinkedList.h  FixedBlockMemoryResource.h
src/: main.cpp
test/: tests.cpp
